tests/NormalTests/paczka1/fuzzy1/90282524.err
Error in line 5: S875 A869 98,5
Error in line 6: S875 A555 20,9
Error in line 4: M35ghiv9 A869 378,4
Error in line 15: emtuxXaz A997 57,8
Error in line 14: M35ghiv9 A997 40,5
Error in line 21: M35ghiv9 A555 95,6
Error in line 22: M35ghiv9 A869 80,6
Error in line 23: M35ghiv9 A555 25,2
Error in line 27: S875 A869 26,1
Error in line 38: M35ghiv9 A555 19,0
